# BotWhatsapp-DownloadManga

./: main.py  manga.py  pyproject.toml
d8euiffr.Elielson/: SiteSecurityServiceState.txt  addonStartup.json.lz4  addons.json  compatibility.ini  cookies.sqlite  extension-preferences.json  extensions.json  formhistory.sqlite  handlers.json  key4.db  permissions.sqlite  pkcs11.txt  prefs.js  protections.sqlite  search.json.mozlz4  sessionstore.jsonlz4  storage.sqlite  times.json  webappsstore.sqlite  xulstore.json
d8euiffr.Elielson/datareporting/: session-state.json  state.json
d8euiffr.Elielson/datareporting/archived/2021-04/: 1619023661488.75859090-99be-4316-9c18-312c6c81ae56.new-profile.jsonlz4  1619023661514.79f74dd0-1357-44e0-9259-6775b16880ef.event.jsonlz4  1619023661563.9d4f4709-8250-4cbd-8875-67ecfbb13b67.main.jsonlz4  1619023661584.eac02db4-f443-4f7d-a122-757171f9b7b6.first-shutdown.jsonlz4
d8euiffr.Elielson/extensions/: jid1-NIfFY2CA8fy1tg@jetpack.xpi
d8euiffr.Elielson/saved-telemetry-pings/: 9d4f4709-8250-4cbd-8875-67ecfbb13b67
d8euiffr.Elielson/shader-cache/: 113d5655881edc73  11c9425ffeb5ab98  161da1561bea2ac3  175f928a2ddb2799  1dd8d36dbaf87371  31364c21430d3473  374059e45361a39  46499aed15f934e0  4c37fbbbc4fb0a66  4db77dbcfafe01f4  5870de572ce0906a  609e59810c941f68  66d99107bfcdd456  6ea5137eb49e9fa4  a18b3820c97c4961  a26efddd55d2453c  a96f6cd46dbce963  b7fbca422bb3f370  cfbc4ad5244f5b5c  f22d6d1f94032763  ff0a3b5086578ee6  startup_shaders
d8euiffr.Elielson/storage/default/https+++addons.mozilla.org/: .metadata-v2
(+13 files in other folders)
