[tool.poetry]
name = "repl_python3_WhatsAppBot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
twilio = "^6.56.0"
chatbot-py = "^2.74"
flask = "^1.1.2"
reportlab = "^3.5.67"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
